--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head><title>Sample Git</title></head> 
 <body> 
 <h1>This is header</h1>
+<h2>New Feature</h2>
 <h1>This is new feature</h1> 
 <p>This is paragraph1</p> 
 <p>This is paragraph2</p> 
