--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML> 
 <html lang = “en”> 
 <head><title>Sample Git</title></head> 
-<body> 
+<body>
+<h1>!!! Sample Git</h1> 
 <h1>This is header</h1>
 <h1>This is new feature</h1> 
 <p>This is paragraph1</p> 
