--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang = “en”> 
 <head><title>Sample Git</title></head> 
 <body>
+<h1>Sample Git Project</h1>
 <h1>!!! Sample Git</h1> 
 <h1>Sample Git</h1> 
 <h1>This is header</h1>
