Fixes #2: fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><title>Sample Git</title></head> 
 <body>
 <h1>Sample Git Project</h1>
-<h1>!!! Sample Git</h1> 
+<h1> Sample Git</h1> 
 <h1>Sample Git</h1> 
 <h1>This is header</h1>
 <h1>This is new feature</h1> 
